# Superpixels

./: CMakeLists.txt  README.md  cielab.cpp  cielab.cpp~  cielab.h  fusion.cpp  fusion.h  image.h  main.cpp  slic.cpp  slic.h  spm.cpp  spm.h
apps/: CMakeLists.txt  color_transfer.cpp  colorize.cpp
gui/: CMakeLists.txt  color_window.cpp  color_window.cpp~  color_window.h  image_area.cpp  image_area.cpp~  image_area.h  image_area.h~  image_window.h~  main_window.cpp  main_window.cpp~  main_window.h  main_window.h~
src/: CMakeLists.txt  cielab.h  coloring.cpp  coloring.h  fusion.cpp  fusion.cpp~  fusion.h  slic.h  spm.h
